--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <link href="https://community.akamai.steamstatic.com/public/shared/css/shared_responsive.css?v=Yt7tFpRVv84m&amp;l=russian" rel="stylesheet" type="text/css" >
     <link href="https://community.akamai.steamstatic.com/public/css/skin_1/header.css?v=g7VmRhGIDEiu&amp;l=russian" rel="stylesheet" type="text/css" >
 
+    <!--suppress JSUnresolvedLibraryURL -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha1/0.6.0/sha1.min.js" integrity="sha512-q6FuE4ifzTygTD/ug8CFnAFXl+i1zXqBWP6flRAuSWjaXrFu4Cznk8Xr+VrWMyi7fSatbssh7ufobAetvXK8Pg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <title>Vite App</title>
   </head>
   <body style="background: rgb(40, 40, 40); padding: 20px">
