Available to add modules to multiple pages

--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
         <div>List of friends comes here....</div>
       </div>
 
+      <!-- Total Statistics Achievement -->
+      <div id="mainContents" class="friends_that_play_content">
+        <div>mainContents: Beginning</div>
+        <div id="tabs">Tabs</div>
+        <div id="subtabs">Subtabs</div>
+        <div id="header_content">Header Content</div>
+      </div>
+
     </div>
     <script type="module" src="/src/main.tsx"></script>
 
