Added link to statistic dropdown menu in "All User Games" page

--- a/index.html
+++ b/index.html
@@ -36,6 +36,38 @@
         <div id="header_content">Header Content</div>
       </div>
 
+      <div class="gameListRow" id="game_220" data-panel="{&quot;type&quot;:&quot;PanelGroup&quot;}"></div>
+      <div class="popup_block2" id="stats_dropdown_220" >
+        <div class="shadow_ul"></div>
+        <div class="shadow_top"></div>
+        <div class="shadow_ur"></div>
+        <div class="shadow_left"></div>
+        <div class="shadow_right"></div>
+        <div class="shadow_bl"></div>
+        <div class="shadow_bottom"></div>
+        <div class="shadow_br"></div>
+        <div class="popup_body2 popup_menu2 shadow_content">
+          <a class="popup_menu_item2 tight" href="https://steamcommunity.com/id/notimeforhero/stats/427520/?tab=achievements">
+            <h5>Achievements UserName</h5>
+          </a>
+          <a class="popup_menu_item2 tight" href="https://steamcommunity.com/stats/427520/achievements/">
+            <h5>Global achievements</h5>
+          </a>
+        </div>
+      </div>
+
+      <div class="gameListRow" id="game_221" data-panel="{&quot;type&quot;:&quot;PanelGroup&quot;}"></div>
+      <div class="popup_block2" id="stats_dropdown_221" >
+        <div class="popup_body2 popup_menu2 shadow_content">
+          <a class="popup_menu_item2 tight" href="https://steamcommunity.com/id/notimeforhero/stats/427520/?tab=achievements">
+            <h5>Achievements UserName</h5>
+          </a>
+          <a class="popup_menu_item2 tight" href="https://steamcommunity.com/stats/427520/achievements/">
+            <h5>Global achievements</h5>
+          </a>
+        </div>
+      </div>
+
     </div>
     <script type="module" src="/src/main.tsx"></script>
 
