--- a/index.html
+++ b/index.html
@@ -14,11 +14,17 @@
     <link href="https://community.akamai.steamstatic.com/public/css/skin_1/profile_friends_list.css?v=lz2QClMhFYYN&amp;l=russian" rel="stylesheet" type="text/css" >
     <link href="https://community.akamai.steamstatic.com/public/shared/css/shared_responsive.css?v=Yt7tFpRVv84m&amp;l=russian" rel="stylesheet" type="text/css" >
     <link href="https://community.akamai.steamstatic.com/public/css/skin_1/header.css?v=g7VmRhGIDEiu&amp;l=russian" rel="stylesheet" type="text/css" >
+    <style>
+      .debug_height {
+        background: #ccccffaa;
+        height: 250vh;
+      }
+    </style>
 
     <!--suppress JSUnresolvedLibraryURL -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha1/0.6.0/sha1.min.js" integrity="sha512-q6FuE4ifzTygTD/ug8CFnAFXl+i1zXqBWP6flRAuSWjaXrFu4Cznk8Xr+VrWMyi7fSatbssh7ufobAetvXK8Pg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-    <title>Vite App</title>
+    <title>Steam Web Achievements</title>
   </head>
   <body style="background: rgb(40, 40, 40); padding: 20px">
     <div id="test_placeholder">
@@ -70,6 +76,8 @@
 
     </div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <div class="debug_height"></div>
 
   </body>
 </html>
